feat: added names of a deice to all endpoints
