# NowqttGateway/spec/swagger.yaml
@@ -74,7 +74,12 @@ paths:
                   items:
                     type: array
                     items:
-                      type: string
+                      type: object
+                      properties:
+                        mac_address:
+                          type: string
+                        name:
+                          type: string
         500:
           description: Internal server error
 
@@ -90,7 +95,7 @@ paths:
       summary: Get a list of devices names
       description: Returns a list of devices names
       tags:
-        - Devices
+        - DevicesNames
       responses:
         200:
           description: A list of devices names
@@ -135,7 +140,7 @@ paths:
       summary: Get a list of devices names
       description: Returns a list of devices names
       tags:
-        - Devices
+        - DevicesNames
       responses:
         200:
           description: A list of devices names
@@ -178,6 +183,8 @@ components:
             type: string
           hop_rssi:
             type: integer
+          name:
+            type: string
 
     Devices_Names:
       type: object
